--- a/network/hermes/config.toml
+++ b/network/hermes/config.toml
@@ -116,8 +116,8 @@ rpc_addr = 'http://127.0.0.1:26657'
 grpc_addr = 'http://127.0.0.1:9090'
 websocket_addr = 'ws://127.0.0.1:26657/websocket'
 rpc_timeout = '10s'
-account_prefix = 'ununifi'
-key_name = 'ununifi'
+account_prefix = 'osmo'
+key_name = 'osmosis'
 store_prefix = 'ibc'
 default_gas = 100000
 max_gas = 3000000
